--- a/src/app/pages/sketch/paint-palette/paint-palette.component.html
+++ b/src/app/pages/sketch/paint-palette/paint-palette.component.html
@@ -2,7 +2,7 @@
     <div class="colors" [class.expand-cols]="expandPalette">
         <div class="cols-row">
             <button class="brush-color" [class.selected]="shade === color" *ngFor="let color of colors1"
-                [style.backgroundColor]="color"></button>
+                [style.backgroundColor]="color" (click)="onSelectColor(color, $event)"></button>
             <button class="more-colors" (click)="onToggleMoreColors($event)">
                 <span class="material-symbols-outlined small-icon">
                     {{expandPalette ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}
@@ -11,15 +11,15 @@
         </div>
         <div class="cols-row">
             <button class="brush-color" [class.selected]="shade === color" *ngFor="let color of colors2"
-                [style.backgroundColor]="color"></button>
+                [style.backgroundColor]="color" (click)="onSelectColor(color, $event)"></button>
         </div>
         <div class="cols-row">
             <button class="brush-color" [class.selected]="shade === color" *ngFor="let color of colors3"
-                [style.backgroundColor]="color"></button>
+                [style.backgroundColor]="color" (click)="onSelectColor(color, $event)"></button>
         </div>
         <div class="cols-row">
             <button class="brush-color" [class.selected]="shade === color" *ngFor="let color of colors4"
-                [style.backgroundColor]="color"></button>
+                [style.backgroundColor]="color" (click)="onSelectColor(color, $event)"></button>
         </div>
     </div>
     <div class="brush-ctrls">
