--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,8 +8,8 @@
           </svg>
         </div>
         <div class='k2' *ngIf="router.url === '/dashboard/note'">
-          <img class="k21" src="assets/icons/keep_big_logo.png">
-          <span class="k22">Fundoo</span>
+          <img class="k21" src="assets/icons/memo_nest.png">
+          <span class="k22" style="margin-top: 5px;">Fundoo</span>
         </div>
         <div class='k3' *ngIf="router.url !== '/dashboard/note'">
           <span class="k22"
